--- a/app/views/guidance/volunteer/guidance_changes-to-placement.html
+++ b/app/views/guidance/volunteer/guidance_changes-to-placement.html
@@ -175,13 +175,17 @@
       <h2 class="gem-c-contents-list__title">Contents</h2>
 
     <ol class="gem-c-contents-list__list">
+      <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+        <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 5" data-track-label="/carers-allowance/further-information" data-track-options='{"dimension29":"Report a change in circumstances"}' href="guidance_overview">Overview</a>
+
+      </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active" aria-current="true">
           <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 5" data-track-label="/carers-allowance/further-information" data-track-options='{"dimension29":"Report a change in circumstances"}' href="guidance_how-it-works">How it works</a>
 
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_who-can-volunteer">Who can volunteer</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_who-can-volunteer">Who can become an emergency volunteer</a>
 
 
         </li>
@@ -191,7 +195,7 @@
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-unemployed-or-retired">If you’re un-employed or retired</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-unemployed-or-retired">If you’re not working or retired</a>
 
         </li>
       </li>
@@ -215,8 +219,18 @@
 <div class="gem-c-govspeak govuk-govspeak direction-ltr disable-youtube" data-module="govspeak">
   <br>
   <h2 id="who-can-volunteer">Changes to your volunteering placement</h2>
+   <p>Unexpected circumstances may affect your volunteering placement.If the end date of your volunteering changes you should read the following guidance.</p>
    
-   
+   <h3>Incomplete placements</h3>
+<p>It is expected that volunteers complete the placement until the specified end date to avoid disruption to organisations within health and social care. If you do not complete your placement, compensation will only be provided to the point at which your placement ended. </p>
+<p>If you fall ill and cannot complete your placement, you will receive compensation up to the point at which you stopped volunteering. </p>
+
+<h3>If employed</h3>
+<p>If you fall ill and cannot complete your placement, you will be entitled to sick pay from the date at which you stopped your placement. If it is in all parties’ interests, you may be able to complete your placement after your illness but you will need to request permission from your employer to do so.</p>
+<p>If you are not able to complete your placement for other reasons and wish to return to work early, it will be up to you and your employer to agree an arrangement between you. Your employer is not obliged to allow you to return to work early, for example if they have made alternative arrangements such as temporary cover.</p>
+<p>There may be situations where you may wish to cancel your Emergency Volunteering Leave during your placement and return to work before completing your placement. If this happens, you should consider speaking to your employer about an early return back.</p>
+<p>If you choose to do further volunteering after participating in the scheme, you will not be eligible for Emergency Volunteering Leave and government compensation.</p>
+
   </div>
 
         <nav class="gem-c-pagination" role="navigation" aria-label="Pagination">
