--- a/app/views/guidance/volunteer/guidance_how-it-works.html
+++ b/app/views/guidance/volunteer/guidance_how-it-works.html
@@ -175,12 +175,17 @@
       <h2 class="gem-c-contents-list__title">Contents</h2>
 
     <ol class="gem-c-contents-list__list">
+
+      <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+        <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 5" data-track-label="/carers-allowance/further-information" data-track-options='{"dimension29":"Report a change in circumstances"}' href="guidance_overview">Overview</a>
+
+      </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active" aria-current="true">
           How it works
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 3" data-track-label="/who_can_volunteer" data-track-options='{"dimension29":"Who can volunteer"}' href="guidance_who-can-volunteer">Who can volunteer</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 3" data-track-label="/who_can_volunteer" data-track-options='{"dimension29":"Who can volunteer"}' href="guidance_who-can-volunteer">Who can become an emergency volunteer</a>
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
@@ -188,7 +193,7 @@
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-unemployed-or-retired">If you’re un-employed or retired</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-unemployed-or-retired">If you’re not working or retired</a>
 
         </li>
       </li>
@@ -214,33 +219,20 @@
 
 
 <div class="gem-c-govspeak govuk-govspeak direction-ltr disable-youtube" data-module="govspeak">
-<p> As part of the Emergency Volunteering Scheme, you can apply for a certificate to become an Emergency Volunteer. You will need specialist skills, experience or qualifications to volunteer within the health, community health or social care sector.
+<p>If you’re thinking about volunteering, you need to do the following:</p>
+<ul>
+  <li>if you are working, you discuss placement and duration with employer where possible</li>
+  <li>you discuss the length of placement with the health and social care service provider and applies for DBS if necessary</li>
+  <li>your health and social care service provider checks DBS and indemnity arrangements and agrees start date with you</li>
+  <li>you apply for a certificate to join the Emergency Volunteering Scheme</li>
+  <li>your health and social care service provider and appropriate authority checks your application</li>
+  <li>you receive your online certificate and share it with your employer</li>
+  <li>if you're working, you give a minimum of three working days' notice before starting your volunteering placement</li>
+  <li>if eligible, you can apply for compensation</li>
 
-  <div role="note" aria-label="Information" class="application-notice info-notice">
-  <p>The Emergency Volunteering scheme is different to other volunteer schemes, such as the NHS Volunteer Responders, because it’s specific to specialists volunteering within the health, community health and social care sector. If you aren’t able to commit to a placement or don’t have the required skills, you can find other ways to volunteer on GOV.UK.</a></p>
-  </div>
-  <p>The volunteering placement can last for two, three or four consecutive weeks within the 16-week duration of the scheme.
-  <p>You will also need to identify a placement in your local area, for example, volunteering within a local care home where the existing workforce has been affected by coronavirus (COVID-19).
-    <h3>How it works</h3>
-    <ul>
-      <li>
-        if you are working, you discuss placement and duration with employer where possible</li>
-      <li>
-        you discuss the length of placement with the health and social care service provider and applies for DBS if necessary</li>
-      <li>
-    your health and social care service provider checks DBS and indemnity arrangements and agrees start date with you</li>
-      <li>
-    you apply for a certificate to join the Emergency Volunteering Scheme</li>
-      <li>
-      your health and social care service provider and appropriate authority checks your application</li>
-      <li>
-      you receive your online certificate and share it with your employer</li>
-      <li>
-      if you're working, you give a minimum of three working days' notice before starting your volunteering placement</li>
-      <li>
-      if eligible, you can apply for compensation</li>
-    </li>
-    </ul>
+  </ul>
+
+  
 
   </div>
 
@@ -257,7 +249,7 @@
             </span>
           </span>
             <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-            <span class="gem-c-pagination__link-label">Who can volunteer</span>
+            <span class="gem-c-pagination__link-label">Who can become an emergency volunteer</span>
         </a>
       </li>
   </ul>
