--- a/app/views/guidance/volunteer/guidance_if-youre-unemployed-or-retired.html
+++ b/app/views/guidance/volunteer/guidance_if-youre-unemployed-or-retired.html
@@ -175,13 +175,19 @@
       <h2 class="gem-c-contents-list__title">Contents</h2>
 
     <ol class="gem-c-contents-list__list">
+
+      <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+        <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 5" data-track-label="/carers-allowance/further-information" data-track-options='{"dimension29":"Report a change in circumstances"}' href="guidance_overview">Overview</a>
+
+      </li>
+      
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active" aria-current="true">
           <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 5" data-track-label="/carers-allowance/further-information" data-track-options='{"dimension29":"Report a change in circumstances"}' href="guidance_how-it-works">How it works</a>
 
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_who-can-volunteer">Who can volunteer</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_who-can-volunteer">Who can become an emergency volunteer</a>
 
 
         </li>
@@ -191,7 +197,7 @@
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-         If you’re un-employed or retired
+          If you’re not working or retired
 
         </li>
       </li>
@@ -214,9 +220,10 @@
 
 <div class="gem-c-govspeak govuk-govspeak direction-ltr disable-youtube" data-module="govspeak">
   <br>
-  <h2 id="who-can-volunteer">If you’re un-employed or retired</h2>
-  <p>If you are currently employed, you may be able to access Emergency Volunteering Leave (EVL) to complete your placement, however you can see a full list of exceptions in this guidance.</p>  
-   
+  <h2 id="who-can-volunteer">If you’re not working or retired</h2>
+  <p>If you’re not working, retired or a student you can volunteer for a part-time or full-time placement. You need an Emergency Volunteer Certificate to access compensation at the end of your placement. </p>  
+   <p>If you’re on benefits or are retired and receiving a pension, your benefit payments and entitlement, or pension payments will not be affected by volunteering through the scheme.
+    </p>
    
   </div>
 
