--- a/app/views/guidance/volunteer/guidance_if-youre-working.html
+++ b/app/views/guidance/volunteer/guidance_if-youre-working.html
@@ -175,13 +175,18 @@
       <h2 class="gem-c-contents-list__title">Contents</h2>
 
     <ol class="gem-c-contents-list__list">
+
+      <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+        <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 5" data-track-label="/carers-allowance/further-information" data-track-options='{"dimension29":"Report a change in circumstances"}' href="guidance_overview">Overview</a>
+
+      </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active" aria-current="true">
           <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 5" data-track-label="/carers-allowance/further-information" data-track-options='{"dimension29":"Report a change in circumstances"}' href="guidance_how-it-works">How it works</a>
 
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_who-can-volunteer">Who can volunteer</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_who-can-volunteer">Who can become an emergency volunteer</a>
 
 
         </li>
@@ -190,7 +195,7 @@
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-unemployed-or-retired">If you’re un-employed or retired</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-unemployed-or-retired">If you’re not working or retired</a>
 
         </li>
       </li>
@@ -214,10 +219,65 @@
 <div class="gem-c-govspeak govuk-govspeak direction-ltr disable-youtube" data-module="govspeak">
   <br>
   <h2 id="who-can-volunteer">If you're working</h2>
-  <p>If you are currently employed, you may be able to access Emergency Volunteering Leave (EVL) to complete your placement, however you can see a full list of exceptions in this guidance.</p>  
+  <p>You’re entitled to take Emergency Volunteering Leave from your employment if you: </p>  
+   <ul>
+     <li>are an employee or worker with a contract of employment or a worker’s contract</li>
+     <li>have been approved as an emergency volunteer and</li>
+     <li>have given  an Emergency Volunteering Certificate to approve your volunteer placement</li>
+    </ul>
    
-   
-  </div>
+    <p>The minimum notice period for taking Emergency Volunteering Leave is three working days. We recommend that you should aim to give your employer as much notice as possible so they can make the necessary cover arrangements.</p>
+    <p>You will not be entitled to take Emergency Volunteering Leave if you are:</p>
+    <ul>
+      <li>in a business with a headcount of staff of 10 or less (micro-business)</li>
+      <li>are a crown servant</li>
+      <li>work for the armed forces or police</li>
+      <li>work as a member of parliamentary staff in England, Scotland, Wales and Northern Ireland</li>
+      <li>are already employed in the health and social care sector</li>
+      <li>already perform an essential role relating to critical infrastructure in the UK</li>
+    </ul>
+
+    <p>If you are a worker or employee in infrastructure, you should speak to your employer about whether your role is deemed to be critical.  </p>
+ 
+    <h3>Employment protections</h3>
+      <p>Emergency Volunteering Leave is a temporary statutory leave entitlement. This means that you can’t take EVL after the scheme has finished.</p>
+      <p>Your employment contract will not be impacted by taking leave. The period of absence will not have any effect on your pension or your entitlement to any employment related benefits, for example, annual leave allowance.</p>
+      <p>If you are thinking of volunteering, we recommend talking to your employer first to give them as much time as possible to arrange sufficient cover. </p>
+      <p>To be granted Emergency Volunteering Leave you must have an Emergency Volunteer Certificate which you can apply for on GOV.UK. </p>
+
+      <p>This certificate ensures you can:</p>
+      <ul>
+        <li>confirm the placement and duration to help your employer arrange cover</li>
+        <li>confirm that you have indemnity cover for the duration of your volunteering</li>
+        <li>apply for compensation by providing the certificate as evidence you started and finished your placement</li>
+      </ul>
+
+      <p>When you have your certificate, you must give your employer a notice period of a minimum  three working days before starting EVL.</p>
+      <p>An employee or worker will only be able to undertake a part-time placement if they are currently employed on a part-time basis. </p>
+
+      <h3>Furloughed workers</h3>
+      <p>If you are furloughed, you can join the Emergency Volunteering Scheme, however, you will not receive compensation for your volunteering.</p>
+      <p>This is due to the fact that you will continue to receive your furlough payment during the duration of your placement. By taking Emergency Volunteering Leave you will receive the same employment protections as other volunteers if you volunteer through the scheme.</p>
+
+      <h3>Agency workers</h3>
+      <p>If you are an agency worker, you are eligible for Emergency Volunteering Leave if you have an employee or worker contract. </p>
+      <p>You will need to formally tell whomever is your employer of your intention to take the leave and provide them with your Emergency Volunteering Certificate. Your employer will then need to tell the other parties in your assignment that you are taking the leave and provide them with a copy of the certificate.</p>
+      <p>For example, this would include the end hirer who you would have worked for during the period of your Emergency Volunteering Leave, the employment business, and the umbrella company, if used.</p>
+
+      <h3>Part-time workers</h3>
+      <p>If you are currently employed on a part-time basis you can only undertake a part-time volunteering placement. </p>
+
+      <h3>Apprentices</h3>
+      <p>If you are an apprentice, you are able to take EVL and do not need to record this as a break in your learning. </p>
+
+      <h3>Problems with your employer</h3>
+      <p>If you have any issues with taking leave you can complain to an employment tribunal if you’re unreasonably refused time off for the Emergency Volunteering Scheme. If you’re sacked because you take leave for emergency volunteering then you may be able to claim unfair dismissal. If you think you’ve been unfairly discriminated against, <a href="#">find out what your rights are</a>.</p>
+
+
+
+
+
+    </div>
 
         <nav class="gem-c-pagination" role="navigation" aria-label="Pagination">
   <ul class="gem-c-pagination__list" data-module="track-click">
@@ -232,7 +292,7 @@
             </span>
           </span>
             <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-            <span class="gem-c-pagination__link-label">If you’re un-employed or retired</span>
+            <span class="gem-c-pagination__link-label">If you’re not working or retired</span>
         </a>
       </li>
   </ul>
