--- a/app/views/guidance/volunteer/guidance_overview.html
+++ b/app/views/guidance/volunteer/guidance_overview.html
@@ -24,7 +24,7 @@
 <meta name="csrf-param" content="authenticity_token">
     <meta charset="utf-8">
     <title lang="en">
-      Volunt - GOV.UK
+      Volunteer - GOV.UK
   </title>
 
     <!--[if gt IE 8]><!--><link rel="stylesheet" media="screen" href="https://assets.publishing.service.gov.uk/static/govuk-template-c0b8ba8b1652aacad298d74f24752260187f538b50c40c2484f7f333cbc3cf2b.css">
@@ -175,30 +175,35 @@
       <h2 class="gem-c-contents-list__title">Contents</h2>
 
     <ol class="gem-c-contents-list__list">
-        <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active" aria-current="true">
-          How it works
+      <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active">
+        Overview
+
+      </li>
+      <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+        <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 3" data-track-label="/who_can_volunteer" data-track-options='{"dimension29":"Who can volunteer"}' href="guidance_how-it-works">How it works</a>
+
+      </li>
+       
+        <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 3" data-track-label="/who_can_volunteer" data-track-options='{"dimension29":"Who can volunteer"}' href="guidance_who-can-volunteer">Who can become an emergency volunteer</a>
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 3" data-track-label="/who_can_volunteer" data-track-options='{"dimension29":"Who can volunteer"}' href="/who_can_volunteer.html">Who can volunteer</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 5" data-track-label="/carers-allowance/further-information" data-track-options='{"dimension29":"Report a change in circumstances"}' href="guidance_if-youre-working">If you're working</a>
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 5" data-track-label="/carers-allowance/further-information" data-track-options='{"dimension29":"Report a change in circumstances"}' href="/carers-allowance/further-information">If you're working</a>
-
-        </li>
-        <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="/carers-allowance/if-youre-working-">If you’re un-employed or retired</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-unemployed-or-retired">If you’re not working or retired</a>
 
         </li>
       </li>
       <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-        <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="/carers-allowance/if-youre-working-">Apply for a certificate to join the Emergency Volunteering Scheme</a>
+        <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_apply">Apply for a certificate to join the Emergency Volunteering Scheme</a>
 
       </li>
     </li>
     <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-      <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="/carers-allowance/if-youre-working-">Changes to your volunteering placement</a>
+      <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_changes-to-placement">Changes to your volunteering placement</a>
 
     </li>
     </ol>
@@ -207,8 +212,10 @@
   </div>
 
   <div class="govuk-grid-column-two-thirds">
+    <br>
         <h1 class="part-title">
-          How it works
+        Overview
+
         </h1>
 
 
@@ -220,93 +227,44 @@
   </div>
   <p>The volunteering placement can last for two, three or four consecutive weeks within the 16-week duration of the scheme.
   <p>You will also need to identify a placement in your local area, for example, volunteering within a local care home where the existing workforce has been affected by coronavirus (COVID-19).
-    <h3>How it works</h3>
+    <h3>Finding a volunteer placement</h3>
+    <p>Before applying for your Emergency Volunteer Certificate, you will need to find a volunteer placement that matches your skills and experience. </p>
+    <p>If you don’t already have a placement in mind, you could call your local volunteer organisation or social care service provider to see if they need support. </p>
+   <p>Alternatively, you can visit the following websites for volunteering opportunities:</p>
     <ul>
       <li>
-        if you are working, you discuss placement and duration with employer where possible</li>
+       <a href="Do-it.org">Do-It</a>
+      </li>
       <li>
-        you discuss the length of placement with the health and social care service provider and applies for DBS if necessary</li>
-      <li>
-    your health and social care service provider checks DBS and indemnity arrangements and agrees start date with you</li>
-      <li>
-    you apply for a certificate to join the Emergency Volunteering Scheme</li>
-      <li>
-      your health and social care service provider and appropriate authority checks your application</li>
-      <li>
-      you receive your online certificate and share it with your employer</li>
-      <li>
-      if you're working, you give a minimum of three working days' notice before starting your volunteering placement</li>
-      <li>
-      if eligible, you can apply for compensation</li>
-    </li>
+        <a href="https://volunteeringmatters.org.uk/">Volunteering Matters</a>
+       </li>
+       <li>
+        <a href="https://navca.org.uk/">National Association for Voluntary and Community Action</a>
+       </li>
+       <li>
+        <a href="Do-it.org">Local Volunteer Centre</a>
+       </li>
+       <li>
+        <a href="https://www.ncvo.org.uk/ncvo-volunteering/find-a-volunteer-centre?view=map">Local Volunteer Centre</a>
+       </li>
+       <li>
+        <a href="https://reachvolunteering.org.uk/">Reach Volunteering</a>
+       </li>
+       <li>
+        <a href="https://volunteering-wales.net/vk/volunteers/index-covid.htm">Volunteering Wales</a>
+       </li>
+       <a href="https://www.volunteerscotland.net/">Volunteering Scotland</a>
+      </li>
+      
+    
     </ul>
 
-
-<h2 id="who-can-volunteer">Who can volunteer</h2>
-<p>You can apply for the Emergency Volunteering Scheme if you have specialist skills, experience and qualifications in the health and care sector. You will also need either a registered address or bank account, a national insurance and DBS check.
-
-  <p>We encourage people with the following skills and experience to apply:</p>
-
-  <ul>
-    <li>
-      have previously worked in the health, community health and social care sectors but do not work there currently</li>
-    <li>
-      are an existing volunteer within the sector, for example, volunteers at St John Ambulance, St John Cymru-Wales, St John Ambulance Northern Ireland, St Andrew Ambulance or the British Red Cross </li>
-    <li>
-      have transferable skills, experience or qualifications, for example, if you have previously worked as a public servant  or you are a trained first aider</li>
-  </li>
-  </ul>
-
-<h3>Exceptions</h3>
-<p>If you are an employer or worker, your employer must allow you to take Emergency Volunteering Leave to take up a volunteering placement unless you:
-<ul>
-  <li>
-  under the age of 18, over 70 or have an underlying health condition</li>
-  <li>
-  living in a household where someone has symptoms of COVID-19</li>
-  <li>
-    work for a business with a headcount of 10 staff or less (micro-business)</li>
-  <li>
-    are a crown servant</li>
-  <li>
-    work for the armed forces or police</li>
-  <li>
-    work as a member of parliamentary staff in England, Scotland, Wales and Northern Ireland</li>
-  <li>
-    are already employed in the health and social care sector</li>
-    <li>
-    filling essential roles relating to critical infrastructure</li>
-</li>
-</ul>
-
-<p>If you are a worker or employee in infrastructure, you should speak to your employer about whether your role is deemed to be critical.</p>
-
-<h2 id="how-youre-paid">If you're working</h2>
-
-<p>If you are currently employed, you may be able to access Emergency Volunteering Leave (EVL) to complete your placement, however you can see a full list of exceptions in this guidance.
-
-<h2 id="how-youre-paid">Receiving compensation</h2>
-
-<p>You may be able to receive Emergency Volunteering Compensation for completing the placement. Compensation covers some loss of earnings for employees and workers that have sacrificed salary or income. For unemployed or retired volunteers, compensation covers a flat rate for expenses. It is not possible to claim both types of compensation.
-
-<p>The health, community health and social care service provider will verify the volunteer’s application. The appropriate authorities, for example, county council or the National Health Service Commissioning Board, will then certify the application. You can find a full list of appropriate authorities in this guidance.
-
-
-<h2 id="what-else-you-can-get">If you're unemployed or retired</h2>
-
-<p>If you’re unemployed, retired or a student you can volunteer for a part-time or full-time placement. You will need to acquire an Emergency Volunteer Certificate to access compensation at the end of your placement.
-
-<h3>Protections</h3>
-
-<p>If you’re on benefits or are retired and receiving a pension, your benefit payments and entitlement, or pension payments will not be affected by volunteering through the scheme.
-
-</div>
-
+  </div>
 
         <nav class="gem-c-pagination" role="navigation" aria-label="Pagination">
   <ul class="gem-c-pagination__list" data-module="track-click">
       <li class="gem-c-pagination__item gem-c-pagination__item--next">
-        <a href="/carers-allowance/eligibility" class="gem-c-pagination__link" rel="next" data-track-category="contentsClicked" data-track-action="next" data-track-label="/carers-allowance/eligibility" data-track-dimension="next" data-track-dimension-index="29">
+        <a href="guidance_how-it-works" class="gem-c-pagination__link" rel="next" data-track-category="contentsClicked" data-track-action="next" data-track-label="/carers-allowance/eligibility" data-track-dimension="next" data-track-dimension-index="29">
           <span class="gem-c-pagination__link-title">
             <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewbox="0 0 17 13">
               <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -316,7 +274,7 @@
             </span>
           </span>
             <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-            <span class="gem-c-pagination__link-label">Eligibility</span>
+            <span class="gem-c-pagination__link-label">How it works</span>
         </a>
       </li>
   </ul>
