--- a/app/views/guidance/volunteer/guidance_who-can-volunteer.html
+++ b/app/views/guidance/volunteer/guidance_who-can-volunteer.html
@@ -175,12 +175,17 @@
       <h2 class="gem-c-contents-list__title">Contents</h2>
 
       <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+        <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 5" data-track-label="/carers-allowance/further-information" data-track-options='{"dimension29":"Report a change in circumstances"}' href="guidance_overview">Overview</a>
+
+      </li>
+
+      <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
         <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 5" data-track-label="/carers-allowance/further-information" data-track-options='{"dimension29":"Report a change in circumstances"}' href="guidance_how-it-works">How it works</a>
 
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active" aria-current="true">
-          Who can volunteer
+          Who can become an emergency volunteer
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
@@ -188,7 +193,7 @@
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-unemployed-or-retired">If you’re un-employed or retired</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-unemployed-or-retired">If you’re not working or retired</a>
 
         </li>
       </li>
@@ -211,48 +216,65 @@
 
 <div class="gem-c-govspeak govuk-govspeak direction-ltr disable-youtube" data-module="govspeak">
   <br>
-  <h2 id="who-can-volunteer">Who can volunteer</h2>
-  <p>You can apply for the Emergency Volunteering Scheme if you have specialist skills, experience and qualifications in the health and care sector. You will also need either a registered address or bank account, a national insurance and DBS check.
+  <h2 id="who-can-volunteer">Who can become an emergency volunteer</h2>
+  <p>To volunteer, you will need either a registered address or bank account, a national insurance number and DBS check.</p>
   
-    <p>We encourage people with the following skills and experience to apply:</p>
-  
+    <p>You can apply for the Emergency Volunteering Scheme if you have specialist skills, experience and qualifications in the health and care sector. You will need to discuss your suitability for the role with the health and social care provider.</p>
+  <p>We encourage people with the following skills and experience to apply:</p>
     <ul>
       <li>
         have previously worked in the health, community health and social care sectors but do not work there currently</li>
       <li>
         are an existing volunteer within the sector, for example, volunteers at St John Ambulance, St John Cymru-Wales, St John Ambulance Northern Ireland, St Andrew Ambulance or the British Red Cross </li>
       <li>
-        have transferable skills, experience or qualifications, for example, if you have previously worked as a public servant  or you are a trained first aider</li>
+        have transferable skills, experience or qualifications, for example, if you have previously worked as a public servant  or you are a trained first aider
+      </li>
     </li>
     </ul>
   
-  <h3>Exceptions</h3>
+  
   <p>If you are an employer or worker, your employer must allow you to take Emergency Volunteering Leave to take up a volunteering placement unless you:
   <ul>
     <li>
-    under the age of 18, over 70 or have an underlying health condition</li>
+      work for a business with a headcount of 10 staff or less (micro-business)
+    </li>
     <li>
-    living in a household where someone has symptoms of COVID-19</li>
+      are a crown servant
+    </li>
     <li>
-      work for a business with a headcount of 10 staff or less (micro-business)</li>
-    <li>
-      are a crown servant</li>
-    <li>
-      work for the armed forces or police</li>
+      work for the armed forces or police
+    </li>
     <li>
       work as a member of parliamentary staff in England, Scotland, Wales and Northern Ireland</li>
     <li>
-      are already employed in the health and social care sector</li>
-      <li>
-      filling essential roles relating to critical infrastructure</li>
-  </li>
+      are already employed in the health and social care sector
+    </li>
+    <li>
+      filling essential roles relating to critical infrastructure
+    </li>
+
+ 
   </ul>
   
   <p>If you are a worker or employee in infrastructure, you should speak to your employer about whether your role is deemed to be critical.</p>
+  <p>To volunteer you must be 18 or over, and fit and well with no symptoms. You should consider <a href="#">government advice regarding social distancing</a> before applying if anyone in your household has symptoms or if you fall into a vulnerable group.</p>
+  <p>All Emergency Volunteers will need to follow <a href="https://www.england.nhs.uk/coronavirus/">NHS safety and hygiene guidance</a> when working in the care setting. </p>
+ 
 
-  </div>
+  <h3>Disclosure and Barring Service (DBS) checks for Emergency Volunteers</h3>
+  <p>You’ll need a DBS certificate to start your placement. You should speak to the health and social care provider about the relevant checks required for the role and if they need to apply for a new DBS check on your behalf. </p>
+  <p>DBS applications will be fast-tracked for volunteers in the Emergency Volunteer Scheme. DBS checks are free for volunteers at all times. You can read <a href="https://www.gov.uk/government/publications/dbs-application-forms-guide-for-applicants">guidance for applicants from the DBS</a>. </p>
+      
+  <h3>Protection for Emergency Volunteers</h3>
+  <p>Individuals can only volunteer in settings where they will be covered by existing indemnity insurance arrangements. Health and social care service providers will check DBS details, local or health authorities will check existing indemnity arrangements and DBS checks are in place, before issuing the necessary certification. </p>
+  
+  <h3>Training</h3>
+  <p>The organisation you are volunteering with will determine if you need additional training before starting your placement. For example, this could be training on how to use PPE or a refresher on guidelines if you have not worked in the sector in the last year. </p>
+  <p>If you are volunteering in the social care sector, Skills for Care have put together a package of training materials, which you may be able to access through your social care service provider. </p>
+ 
+</div>
 
-        <nav class="gem-c-pagination" role="navigation" aria-label="Pagination">
+  <nav class="gem-c-pagination" role="navigation" aria-label="Pagination">
   <ul class="gem-c-pagination__list" data-module="track-click">
       <li class="gem-c-pagination__item gem-c-pagination__item--next">
         <a href="guidance_if-youre-working" class="gem-c-pagination__link" rel="next" data-track-category="contentsClicked" data-track-action="next" data-track-label="/carers-allowance/eligibility" data-track-dimension="next" data-track-dimension-index="29">
