--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,6 +35,28 @@
             <hr>
             <br>
 
+            <h2 class="govuk-heading-l">Full journey v1.2</h2>
+            <p>Last updated: Friday 17 April 2020</p>
+              <ol class="govuk-list govuk-list--number">
+                <li><p><a href="guidance/volunteer/guidance_apply">Volunteer applying for Emergency Volunteering Leave</a>
+                  <br><a href="v1-2/emails/to-provider">Email to provider with a link to approve volunteer information</a>
+                </li>
+
+                <li><a href="v1-2/provider/view-info-1">Provider checking volunteer information</a>
+                <br><a href="v1-2/emails/to-volunteer-rejected-by-provider.html">Email to volunteer they have been rejected by provider or Local Authority</a>
+                <br><a href="v1-2/emails/to-LA-to-approve">Email to Local Authority to approve volunteer and provider information </a></li>
+                <p></p>
+
+                <li><a href="v1-2/local-authority/view-info-1">Local authority approving volunteer and provider info</a>
+                  <br><a href="v1-2/emails/to-LA-after-approval">Email to Local Authority to confirm their own approval</a>
+                    <br><a href="v1-2/emails/to-LA-after-rejecting">Email to Local Authority to confirm their own rejection</a>
+                      <br><a href="v1-2/emails/to-provider-after-rejected-from-LA">Email to provider to confirm rejection by Local Authority</a>
+                        <br><a href="v1-2/emails/to-volunteer-certificate">Email to volunteer with their certificate</a></li>
+                </ol>
+<br>
+<hr>
+<br>
+
             <h2 class="govuk-heading-l">Full journey v1.1</h2>
             <p>Last updated: Tuesday 6 April 2020</p>
               <ol class="govuk-list govuk-list--number">
